--- a/res/static/style.css
+++ b/res/static/style.css
@@ -43,6 +43,14 @@ dl {
   margin: 0;
 }
 
+hr {
+  color: #D9D9D9;
+  border: 0 solid #fff;
+  border-top: 1px solid #D9D9D9;
+  margin: 14px 0 14px 0;
+}
+
+
 ol.plain, ul.plain, .plain li {
     padding: 0;
     margin: 0;
