--- a/res/static/style.css
+++ b/res/static/style.css
@@ -61,25 +61,33 @@ small {
   font-size: 13px;
 }
 
-table {
+table.rays {
+  width: 100%;
+  background-image: url('img/html5-rays.png');
+  background-position: center;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+}
+
+table.members, table.types {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 1em;
   margin-top: 1em;
 }
 
-th {
+table.members th {
   background-color: #D9D9D9;
 }
 
-td, th {
+table.members td, table.members th, table.types td, table.types th {
   border: 1px solid #D9D9D9;
   padding: 5px;
   text-align: left;
   vertical-align: top;
 }
 
-.members td:first-child {
+table.members td:first-child {
   width: 20%;
 }
 
